...
                            <constraint firstAttribute="trailing" secondItem="qsa-GA-zwj" secondAttribute="trailing" id="J44-Et-HY2"/>
                            <constraint firstItem="qsa-GA-zwj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="b4V-vV-RTb"/>
                            <constraint firstItem="qsa-GA-zwj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ryv-ZC-Bj6"/>
                            <constraint firstItem="qsa-GA-zwj" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="vT4-Ec-Ina"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Recipe Book" id="zj7-yJ-2k1">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="3Yz-S6-Lgp">
                            <connections>
                                <segue destination="OiE-O7-Yq2" kind="presentation" identifier="CreateSegue" id="Fkh-ba-Jpw"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            </navigationBar>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="aAq-3P-iwL" userLabel="Ingredients, Instructions, Nutrition Facts, Photos">
                                <rect key="frame" x="8" y="72" width="359" height="29"/>
                                <segments>
                                    <segment title="Ingredients"/>
                                    <segment title="Instructions"/>
                                    <segment title="Nutrition Facts"/>
                                    <segment title="Photos"/>
                                </segments>
                                <connections>
                                    <action selector="segmentSwitcherFor:" destination="zBc-rz-Zpk" eventType="primaryActionTriggered" id="UcL-Tr-faR"/>
                                </connections>
                            </segmentedControl>
                            <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uad-Jw-995" userLabel="Ingredients Container View">
...
                                <date key="date" timeIntervalSinceReferenceDate="511843220.20065898">
                                    <!--2017-03-22 02:40:20 +0000-->
                                </date>
                            </datePicker>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Ca-Sb-29Y">
                                <rect key="frame" x="132" y="449" width="111" height="74"/>
                                <state key="normal" title="Add to Calendar"/>
                                <connections>
                                    <action selector="exportToCalendar" destination="TiC-JP-HQS" eventType="touchUpInside" id="kB2-HO-roW"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="23H-5O-0NU" id="5lV-jc-ZoM"/>
                            <outlet property="delegate" destination="23H-5O-0NU" id="H86-vR-8Ck"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="TItle" id="PUL-Vi-Xxp">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Phm-Sa-Q3L">
                            <connections>
                                <action selector="cancelPressedWithSender:" destination="23H-5O-0NU" id="ALW-AA-9Hj"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="NVd-Fv-2Zl">
...
