...
            photosController.recipe = recipe
        }
        if (segue.identifier == "RecipeEditSegue"){
            let createViewController = segue.destination.childViewControllers[0] as! CreateViewController
            createViewController.recipe = recipe
            createViewController.delegate = self
            createViewController.title = "Edit Recipe"
            createViewController.name = recipe.recipeName
            createViewController.type = recipe.recipeType
            createViewController.nutrient = RecipeService.shared.recipeNutrition(for: recipe).fetchedObjects
            createViewController.instruction = RecipeService.shared.recipeInstructions(for: recipe).fetchedObjects
            createViewController.ingredient = RecipeService.shared.recipeIngredients(for: recipe).fetchedObjects
        }
...
